# kaleb-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  USAGE_GUIDE.md  create_desktop_shortcut.py  docker-compose.yml  eslintignore  fix_code.py  knowledge_base_index.faiss  knowledge_base_metadata.pkl  package-lock.json  package.json  pyproject.toml  requirements.txt  run_system.bat  run_system_debug.bat  setup.py  start_kaleb.ps1  start_whatsapp_session.py  test_yaml.py  webapp.py
automacao-inteligente/automacao-inteligente/: README.md
automacao-inteligente/automacao-inteligente/diagrams/: fluxo-principal.mmd
automacao-inteligente/automacao-inteligente/docs/: 01-roteiro-inicial.md  02-estrutura-agentes.md  03-pipelines.md  04-contexto-memoria-rag.md  05-subagentes.md  06-funcoes-complementares.md  07-validacao-deploy.md  08-complementos-finais.md  09-implementation-plan.md  10-pipeline-specifications.md  (+8 more)
config/: default.yaml
docs/: implemented_features.md
knowledge_base/: base.txt
src/: chat.py  index.js  knowledge_retriever.py  main.py  process_knowledge.py  run_kaleb.bat  templates  whatsapp_listener.py
src/agents/: base_agent.py  document_agent.py  email_agent.py  finance_agent.py  scheduler_agent.py  support_agent.py  user_agent.py  whatsapp_agent.py
src/config/: config_manager.py  default.yaml
src/integrations/: base_adapter.py  database_adapter.py  email_adapter.py  integration_manager.py
src/pipelines/: base_pipeline.py  connect_whatsapp.ps1  document_pipeline.py  email_pipeline.py  finance_pipeline.py  scheduler_pipeline.py  support_pipeline.py  webapp.py
src/vscode/: settings.json
templates/: config.html  whatsapp.html  whatsapp_instructions.html
tests/: run_tests.py  test_base.py
tests/test_agents/: test_base_agent.py  test_email_agent.py
tests/test_pipelines/: test_base_pipeline.py  test_email_pipeline.py
waha_data/: config.html
(+2 files in other folders)
