[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-automation-system"
description = "Um sistema de automação inteligente com agentes especializados e pipelines configuráveis"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Intelligent Automation Team", email = "automation@example.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.7"
dependencies = [
    "PyYAML>=5.4.1",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
]

[project.urls]
Homepage = "https://github.com/your-username/intelligent-automation-system"
Documentation = "https://github.com/your-username/intelligent-automation-system/blob/main/docs/implemented_features.md"
Repository = "https://github.com/your-username/intelligent-automation-system.git"
"Bug Tracker" = "https://github.com/your-username/intelligent-automation-system/issues"

[project.scripts]
intelligent-automation = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]